// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot check snapshot command 1`] = `
Object {
  "alias": "s",
  "description": "Take a snapshot of the versions and store in solidarity file",
  "run": [Function],
}
`;

exports[`with a .solidarity file given a new rule to add given a dir rule adds the rule 1`] = `
Array [
  Array [
    Object {
      "message": "Would you like to add the dir './config' to your Solidarity file?",
      "name": "addNewRule",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "Would you like to create a new requirement set?",
      "name": "makeNewRequirement",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "What would you like to call this new requirement?",
      "name": "newRequirement",
      "type": "input",
    },
  ],
]
`;

exports[`with a .solidarity file given a new rule to add given a file rule adds the rule 1`] = `
Array [
  Array [
    Object {
      "message": "Would you like to add the file './nachos' to your Solidarity file?",
      "name": "addNewRule",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "Would you like to create a new requirement set?",
      "name": "makeNewRequirement",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "What would you like to call this new requirement?",
      "name": "newRequirement",
      "type": "input",
    },
  ],
]
`;

exports[`with a .solidarity file given a new rule to add given a shell rule should add the new shell rule 1`] = `
Array [
  Array [
    Object {
      "message": "What's the command for the shell rule you'd like to add?",
      "name": "whatRule",
      "type": "input",
    },
  ],
  Array [
    Object {
      "message": "Would you like to add the shell 'git config user.email' to your Solidarity file?",
      "name": "addNewRule",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "Would you like to create a new requirement set?",
      "name": "makeNewRequirement",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "What would you like to call this new requirement?",
      "name": "newRequirement",
      "type": "input",
    },
  ],
  Array [
    Object {
      "message": "What would you like the shell command to match on?",
      "name": "shellMatch",
      "type": "input",
    },
  ],
]
`;

exports[`with a .solidarity file given a new rule to add given an cli rule handles a binary enforceVersion: false 1`] = `
Array [
  Array [
    Object {
      "message": "Would you like to add the cli 'yarn' to your Solidarity file?",
      "name": "addNewRule",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "Would you like to create a new requirement set?",
      "name": "makeNewRequirement",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "What would you like to call this new requirement?",
      "name": "newRequirement",
      "type": "input",
    },
  ],
  Array [
    Object {
      "message": "Would you like to enforce a version requirement?",
      "name": "enforceVersion",
      "type": "confirm",
    },
  ],
]
`;

exports[`with a .solidarity file given a new rule to add given an cli rule handles a binary with enforceVersion: true 1`] = `
Array [
  Array [
    Object {
      "message": "Would you like to add the cli 'yarn' to your Solidarity file?",
      "name": "addNewRule",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "Would you like to create a new requirement set?",
      "name": "makeNewRequirement",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "What would you like to call this new requirement?",
      "name": "newRequirement",
      "type": "input",
    },
  ],
  Array [
    Object {
      "message": "Would you like to enforce a version requirement?",
      "name": "enforceVersion",
      "type": "confirm",
    },
  ],
]
`;

exports[`with a .solidarity file given a new rule to add given an env rule adds the rule 1`] = `
Array [
  Array [
    Object {
      "message": "Would you like to add the env 'PATH' to your Solidarity file?",
      "name": "addNewRule",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "Would you like to create a new requirement set?",
      "name": "makeNewRequirement",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "What would you like to call this new requirement?",
      "name": "newRequirement",
      "type": "input",
    },
  ],
]
`;

exports[`with a .solidarity file given a new rule to add should work if given an incomplete rule  1`] = `
Array [
  Array [
    Object {
      "message": "What's the binary for the cli rule you'd like to add?",
      "name": "whatRule",
      "type": "input",
    },
  ],
  Array [
    Object {
      "message": "Would you like to add the cli 'ruby' to your Solidarity file?",
      "name": "addNewRule",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "Would you like to create a new requirement set?",
      "name": "makeNewRequirement",
      "type": "confirm",
    },
  ],
  Array [
    Object {
      "message": "What would you like to call this new requirement?",
      "name": "newRequirement",
      "type": "input",
    },
  ],
  Array [
    Object {
      "message": "Would you like to enforce a version requirement?",
      "name": "enforceVersion",
      "type": "confirm",
    },
  ],
]
`;
